[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raiju"
version = "0.1.1"
description = "A PySpark wrapper that implicitly exposes all PySpark functionality"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyspark>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.0.0",
    "pytest>=8.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["raiju"]
branch = true

[tool.coverage.report]
exclude_lines = ["def __getattr__"]
show_missing = true

[tool.ruff]
target-version = "py39"
line-length = 88
src = ["raiju"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.setuptools.packages.find]
where = ["."]
include = ["raiju*"]
